footer of demo of demo

--- a/new  1.html
+++ b/new  1.html
@@ -25,7 +25,8 @@
 				  box-shadow:1px 1px 1px #000;}
 	.navbar-nav a{color:#223; padding-bottom:13px;}
 	.navbar-nav a:hover{color:#001; padding-bottom:10px; border-bottom:3px solid #1B6FB8;}
-	footer{padding:20px;}
+	footer{padding:20px; text-align:center; border-top:2px solid #1B6FB8;}
+	footer a{color:#1B6FB8;}
 	.row{padding:1px 25px;}
 	.rest_contents{padding:50px 150px;}
 	.upper_row{padding:5px 25px; }
@@ -191,7 +192,10 @@ Follow us</p>
 		</div>
 		
 		<footer>
-			&copy SHIMUL LOGISTIC developed by RESOFT
+			<a href=""><b>Desclaimer</b></a> | <a href=""><b>Policy</b></a> | <a href=""><b>About Us</b></a> | <a href=""><b>Career</b></a> | <a href=""><b>Contact us</b></a>
+		</br></br>Shimoon Logistic , Choumuhuni, Chittagong, Bangladesh
+		</br>&copy <b>SHIMOON LOGISTICS</b>
+		</br>Developed By <a href=""><b>RESOFT</b></a>
 		</footer>
 							
 </body>
