--- a/new  1.html
+++ b/new  1.html
@@ -30,10 +30,10 @@
 	.row{padding:1px 25px;}
 	.rest_contents{padding:50px 150px;}
 	.upper_row{padding:5px 25px; }
-	.upper_row_content{border-top:5px solid #1B6FB8; background:#f2f2f2;height:415px; box-shadow:1px 1px 2px #557; transition: background 0.3s, box-shadow 0.2s;}
+	.upper_row_content{border-top:5px solid #1B6FB8; background:#f2f2f2;height:425px; box-shadow:1px 1px 2px #557; transition: background 0.3s, box-shadow 0.2s;}
 	.upper_row_content:hover{background:#f9f9f9;  box-shadow:3px 3px 4px #557;}
 	.upper_row_content h3{color: #3071A9;}
-	.upper_row_content h3, .upper_row_content p{padding:2px 12px;}
+	.upper_row_content h3, .upper_row_content p{padding:2px 14px;}
 	</style>
 </head>
 <body>
@@ -46,7 +46,7 @@
 		<div class="nav_head">
 			<div class="row">
 				<div class="col-sm-9">
-					<img src="img/logo.png" height="70"><b style="color:#00BED5; font-size:18px;">Shimun Logistic</b>
+					<img src="img/logo.png" height="70"><b style="color:#00BED5; font-size:17px;">Shimoon Logistic</b>
 				</div>
 				<div class="col-sm-3">
 					<div class="search">
