--- a/new  1.html
+++ b/new  1.html
@@ -219,8 +219,8 @@
 									
 									<!--Rest of the items-->
 									
-		<div class="row rest_contents slideanimleft">
-			<div class="col-sm-4 upper_row">
+		<div class="row rest_contents">
+			<div class="col-sm-4 upper_row slideanimleft">
 				<div class="upper_row_content">
 					<img src="img/service.jpg" class="img-responsive">
 					<h3>Specialized service</h3>
@@ -249,8 +249,8 @@
 			</div>
 		</div>
 		
-		<div class="row rest_contents slideanimleft">
-			<div class="col-sm-4 upper_row">
+		<div class="row rest_contents">
+			<div class="col-sm-4 upper_row slideanimleft">
 				<div class="upper_row_content">
 				<img src="img/news.jpg" class="img-responsive">
 					<h3>Notice</h3>
