About page added

--- a/assets/about_us.html
+++ b/assets/about_us.html
@@ -25,7 +25,9 @@
 				  box-shadow:1px 1px 1px #000;}
 	.navbar-nav a{color:#223; padding-bottom:13px;}
 	.navbar-nav a:hover{color:#001; padding-bottom:10px; border-bottom:3px solid #1B6FB8;}
-	footer{padding:20px; text-align:center; border-top:2px solid #1B6FB8;}
+	.demo-image{width:98vw; height:35vh; padding:1vh; transition: width 0.4s, padding 0.4s;}
+	.demo-image:hover{width:100vw; height:35vh;  padding:0.2vh;}
+	footer{padding:20px; text-align:center; border-top:2px solid #1B6FB8; }
 	footer a{color:#1B6FB8;}
 	.row{padding:1px 25px;}
 	.rest_contents{padding:30px 175px;}
@@ -221,12 +223,21 @@
 									<!--Rest of the items-->
 									
 		<div class="row rest_contents" style="padding-left:172px;">
+		<div class="col-xs-6">
 			<h2 style="color:#3071A9">About Us</h2>
 					<p>Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy. Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy.</p>
 					<p>Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy. Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy.</p>
 					<p>Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy. Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy.</p>
-					<p>Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy. Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy.</p>
-		</div>						
+		</div>
+		
+		<div class="col-xs-6">
+		<br><br><br>
+			<img src="img/sample1.jpg" class="img-responsive demo-image">
+		<br><br><br>
+			<img src="img/log3.jpg" class="img-responsive demo-image">
+		</div>
+
+		</div>
 									
 
 		
