added a few more files

--- a/assets/freights.html
+++ b/assets/freights.html
@@ -224,7 +224,7 @@
 									
 		<div class="row rest_contents" style="padding-left:172px;">
 		<div class="col-xs-6">
-			<h2 style="color:#3071A9">About Us</h2>
+			<h2 style="color:#3071A9">Our Freights</h2>
 					<p>Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy. Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy.</p>
 					<p>Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy. Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy.</p>
 					<p>Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy. Our commitment to sustainability helps us reduce waste and share the benefits with our customers. It permeates the way we do business, driving us to innovate and be creative in everything from warehousing operations to transportation, from solution design to procurement policy.</p>
@@ -232,9 +232,9 @@
 		
 		<div class="col-xs-6">
 		<br><br><br>
-			<img src="img/sample1.jpg" class="img-responsive demo-image">
+			<img src="img/demo7.jpg" class="img-responsive demo-image">
 		<br><br><br>
-			<img src="img/log3.jpg" class="img-responsive demo-image">
+			<img src="img/demo5.jpg" class="img-responsive demo-image">
 		</div>
 
 		</div>
